--- a/MontagemCurriculo/Views/Curriculos/Details.cshtml
+++ b/MontagemCurriculo/Views/Curriculos/Details.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "Currículo " + Model.Nome;
 }
 
+
+<div class="col s2">
+    <h5>Currículo @Model.Nome</h5>&nbsp;
+    <a class="btn red darken-4" asp-controller="Curriculos" asp-action="VisualizarComoPDF">PDF</a>
+</div>
+
+
+
 <div>
 
     <ul class="collection with-header">
@@ -32,6 +40,15 @@
             </h5>
         </li>
         @await Component.InvokeAsync("ExperienciasProfissionais", Model.CurriculoId)
+    </ul>
+
+    <ul class="collection with-header">
+        <li class="collection-header">
+            <h5>
+                Idiomas <a asp-action="Create" asp-controller="Idiomas" asp-route-id="@Model.CurriculoId" class="btn-floating btn-small blue darken-4"><i class="material-icons">add</i></a>
+            </h5>
+        </li>
+        @await Component.InvokeAsync("Idiomas", Model.CurriculoId)
     </ul>
 
 
